<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="clear">Clear</string>
    <string name="plus">+</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="control">Control</string>
    <string name="results">Results</string>
    <string name="jdelgad">Jdelgad</string>
</resources>